[package]
name = "basic-todoapi-actix"
version = "0.1.0"
authors = ["Jawad W. Ahmed <Jawad.W.Ahmed@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde = { version = "1", features = ["derive"] }
pretty_env_logger = "0.4"